# calcify

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  bench-splash.bat  css-compute-engine-spec-v2-1.md  justfile  kill-and-rebuild.bat  run-bios-test.bat  run-js.bat  run-oldbios-test.bat  run-splash.bat  run-web.bat  run.bat  serve.mjs  serve.py  start-debugger-daemon.bat
.claude/: settings.local.json
.github/workflows/: ci.yml
.serena/: project.yml
crates/calcify-cli/: Cargo.toml
crates/calcify-cli/examples/: diagnose.rs
crates/calcify-cli/src/: main.rs
crates/calcify-core/: Cargo.toml
crates/calcify-core/benches/: x86css.rs
crates/calcify-core/src/: conformance.rs  error.rs  eval.rs  lib.rs  parser.rs  pattern.rs  state.rs  types.rs
crates/calcify-core/src/parser/: css_functions.rs  property.rs  stylesheet.rs
crates/calcify-core/src/pattern/: broadcast_write.rs  dispatch_table.rs
crates/calcify-core/tests/: integration.rs
crates/calcify-wasm/: Cargo.toml
crates/calcify-wasm/src/: lib.rs
crates/calcite-cli/: Cargo.toml
crates/calcite-cli/assets/: css-dos-logo.rgba
crates/calcite-cli/examples/: diagnose.rs
crates/calcite-cli/src/: bench.rs  calcite_logo.rs  cssdos_logo.rs  main.rs  menu.rs  watch_spec.rs
crates/calcite-core/: Cargo.toml
crates/calcite-core/benches/: phase0_dispatch.rs  phase0_tick.rs  x86css.rs
crates/calcite-core/src/: compile.rs  conformance.rs  cycle_tracker.rs  error.rs  eval.rs  lib.rs  parser.rs  pattern.rs  script.rs  script_eval.rs  script_spec.rs  state.rs  summary.rs  tick_period.rs  timer.rs  types.rs
crates/calcite-core/src/dag/: build.rs  closure.rs  closure_codegen.rs  inlined_codegen.rs  lowering.rs  mod.rs  normalise.rs  patterns.rs  types.rs  walker.rs  wasm_codegen.rs  wasm_host.rs
crates/calcite-core/src/parser/: css_functions.rs  fast_path.rs  property.rs  stylesheet.rs
crates/calcite-core/src/pattern/: broadcast_write.rs  byte_period.rs  dispatch_specialise.rs  fusion_sim.rs  identity_prune.rs  loop_descriptor.rs  memory_fill.rs  op_profile.rs  packed_broadcast_write.rs  rep_applier.rs  rep_dual_harness.rs  replicated_body.rs
crates/calcite-core/src/pattern/loop_descriptor/: tests.rs
crates/calcite-core/tests/: backend_equivalence.rs  integration.rs  memory_copy.rs  memory_fill.rs  memory_fill_css.rs  phase0_dispatch_conformance.rs  phase2_node_count.rs  phase3_closure_smoke.rs  primitive_conformance.rs  rep_fast_forward.rs  script_primitives.rs  v2_cabinet_differential.rs  v2_closures_differential.rs  v2_inlined_differential.rs  v2_tick_semantics.rs  v2_wasm_differential.rs
crates/calcite-debug-summary/: Cargo.toml
crates/calcite-debug-summary/src/: lib.rs
crates/calcite-debug-summary/tests/: summary.rs
crates/calcite-debugger/: Cargo.toml
crates/calcite-debugger/src/: main.rs
crates/calcite-debugger/tests/: minimal.css  smoke.jsonl  smoke_runner.py
crates/calcite-pc-video/: Cargo.toml
crates/calcite-pc-video/src/: lib.rs
crates/calcite-wasm/: Cargo.toml
crates/calcite-wasm/src/: lib.rs
docs/: benchmarking.md  codebug.md  compiler-mission.md  compiler-spec.md  conformance-testing.md  css-primitives.md  daemon-mode.md  debugger.md  log.md  optimisation-ideas.md  phase1-dag-ir.md  phase2-idiom-catalogue.md  rep-3b-scoping.md  v2-flat-walker-brief.md  v2-rewrite-design.md  v2-self-review-2026-04-29.md  v2-wasm-perf-brief.md
docs/superpowers/plans/: 2026-04-17-web-stats-and-css-keyboard.md  2026-04-18-bulk-ops-css-dos-contract.md  2026-04-18-bulk-ops-css-dos-handoff.md  2026-04-18-bulk-ops-handoff.md  2026-04-18-bulk-ops-pr1-status.md  2026-04-18-bulk-ops.md  2026-04-18-memory-fill-op.md
docs/superpowers/specs/: 2026-04-14-multi-key-dispatch-design.md  2026-04-17-memoisation-viability.md  2026-04-17-web-stats-and-css-keyboard-design.md  2026-04-18-bulk-ops-design.md  2026-04-18-memory-fill-op-design.md
programs/Sokoban/: program.json
programs/fire/: README.md  fire.asm  fire.com
programs/rogue-muslin/: program.json
programs/thexder/: INSTALLH.BAT
site/: calcite-worker.js  index.html  program.html  run.html  style.css
tests/conformance/: README.md  package-lock.json  package.json  run-primitives.mjs  runner.html
tests/conformance/primitives/: calc_abs.css  calc_abs.expect.json  calc_add.css  calc_add.expect.json  calc_clamp.css  calc_clamp.expect.json  calc_clamp_below.css  calc_clamp_below.expect.json  calc_div.css  calc_div.expect.json  calc_div_zero.css  calc_div_zero.expect.json  calc_max.css  calc_max.expect.json  calc_min.css  calc_min.expect.json  calc_mod.css  calc_mod.expect.json  calc_mod_negative.css  calc_mod_negative.expect.json  calc_mul.css  calc_mul.expect.json  calc_negate.css  calc_negate.expect.json  calc_pow.css  calc_pow.expect.json  calc_round.css  calc_round.expect.json  calc_round_down.css  calc_round_down.expect.json  calc_round_to_zero.css  calc_round_to_zero.expect.json  calc_round_up.css  calc_round_up.expect.json  calc_sign.css  calc_sign.expect.json  calc_sub.css  calc_sub.expect.json  cascade_dependency.css  cascade_dependency.expect.json  (+58 more)
tmp/: ops.json  wp.json
tools/: calc-mem.mjs  codebug.mjs  compare.mjs  diagnose.mjs  fulldiff.mjs  mcp-shim.mjs  ref-dos.mjs  ref-emu.mjs  serve-web.mjs
tools/archive/: boot-trace.mjs  ref-emu.mjs  serve-js8086.mjs  test-daemon-smoke.mjs
tools/debug/: check_cs.mjs  compute_values.mjs  find_dataend.mjs  find_singlefile.mjs  trace_corrupt.mjs
uprof-out/minimal/AMDuProf-calcite-bench-TBP_Apr-18-2026_21-11-17/: cpu.db  session.uprof
uprof-out/profile-run/AMDuProf-calcite-bench-EBP_Apr-18-2026_21-08-00/: cpu.db  report.csv  session.uprof
uprof-out/rogue-assess/AMDuProf-calcite-bench-EBP_Apr-18-2026_21-04-28/: callstack.db  report.csv  session.uprof
web/: calcify-worker.js  calcite-worker.js  index.html  js8086-worker.js  js8086.html  video-modes.mjs
web/pkg/: calcite_wasm.d.ts  calcite_wasm.js  calcite_wasm_bg.wasm  calcite_wasm_bg.wasm.d.ts  package.json
x86css-mw/: README.md  x86css.html
(+7 files in other folders)
