[workspace]
resolver = "2"
members = [
    "crates/calcite-core",
    "crates/calcite-cli",
    "crates/calcite-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/stop-amertime/calcite"

[workspace.dependencies]
calcite-core = { path = "crates/calcite-core" }
cssparser = "0.37"
log = "0.4"
thiserror = "2"
