[workspace]
resolver = "2"
members = [
    "crates/calcite-core",
    "crates/calcite-cli",
    "crates/calcite-debugger",
    "crates/calcite-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/stop-amertime/calcite"

[workspace.dependencies]
calcite-core = { path = "crates/calcite-core" }
cssparser = "0.37"
log = "0.4"
thiserror = "2"

# Enable debug symbols in release builds for profiling (flamegraphs, perf, etc.)
[profile.release]
debug = true
lto = "fat"
codegen-units = 1
