[package]
name = "calcify-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for running computational CSS through calc(ify)"

[dependencies]
calcify-core = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
