[package]
name = "calcify-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings for calc(ify) — runs in a Web Worker"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
calcify-core = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
log = { workspace = true }
console_log = "1"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
