[package]
name = "calcite-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for running computational CSS through calc(ite)"

[dependencies]
calcite-core = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
