[package]
name = "calcite-debugger"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP debug server for calcite — step, inspect, compare CSS execution"

[dependencies]
calcite-core = { workspace = true, features = ["conformance"] }
log = { workspace = true }
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync"] }
rmcp = { version = "1", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1"
